@@ -88,9 +88,10 @@
 			<option
 				value="-1">Off</option>
 			<option
-				value="0">Ignore</option>
-			<option
 				value="1">On</option>
+			<option
+				value="0">Ignore</option>
+			
 		</field>
 
 		<field
