@@ -46,14 +46,16 @@ foreach ($this->orders2 as $k=>$items) {
 
 			<label id="jform_type-lbl" class="hasTip" for="jform_type"><?php echo JText::_('Module Type'); ?>:</label>
 			<input id="jform_type" class="readonly" type="text" readonly="readonly" size="16" value="<?php echo JText::_($this->row->module); ?>" name="jform[type]"/>
-			
 		
 			<label id="jform_showtitle-lbl" class="hasTip" for="jform_showtitle"><?php echo JText::_('Show title'); ?>:</label>
-					<div class="jform_mod_title"><?php echo $this->lists['showtitle']; ?></div>
+			<fieldset id="jform_showtitle" class="radio">
+				<div class="jform_mod_title"><?php echo $this->lists['showtitle']; ?></div>
+			</fieldset>
 		
 			<label id="jform_published-lbl" class="hasTip" for="jform_published"><?php echo JText::_('Published'); ?>:</label>
+			<fieldset id="jform_published" class="radio">
 					<?php echo $this->lists['published']; ?>
-		
+			</fieldset>
 			<label id="jform_position-lbl" class="hasTip" for="jform_position" title="<?php echo JText::_('MODULE_POSITION_TIP_TITLE', true); ?>::<?php echo JText::_('MODULE_POSITION_TIP_TEXT', true); ?>">
 						<?php echo JText::_('Position'); ?>:
 					</label>
@@ -127,22 +129,23 @@ foreach ($this->orders2 as $k=>$items) {
 			<label id="jform_menus-lbl" class="hasTip" for="jform_menus"><?php echo JText::_('Menus'); ?>:</label>
 				<?php if ($this->row->client_id != 1) : ?>
 				
+			<fieldset id="jform_menus" class="radio">
 				<label id="jform_menus-all-lbl" for="menus-all"><?php echo JText::_('All'); ?></label>
 				<input id="menus-all" type="radio" name="menus" value="all" onclick="allselections();" <?php
 						echo ($this->row->pages == 'all') ? 'checked="checked"' : ''; ?> />
-						
+			
 				<label id="jform_menus-none-lbl" for="menus-none"><?php echo JText::_('None'); ?></label>	
 				<input id="menus-none" type="radio" name="menus" value="none" onclick="disableselections();" <?php
 						echo ($this->row->pages == 'none') ? 'checked="checked"' : ''; ?> />
-					
+			
 				<label id="jform_menus-select-lbl" for="menus-select"><?php echo JText::_('Select From List'); ?></label>	
 				<input id="menus-select" type="radio" name="menus" value="select" onclick="enableselections();" <?php
 						echo ($this->row->pages == 'select') ? 'checked="checked"' : ''; ?> />
-					
+						
 				<label id="jform_menus-deselect-lbl" for="menus-deselect"><?php echo JText::_('Deselect From List'); ?></label>
 				<input id="menus-deselect" type="radio" name="menus" value="deselect" onclick="enableselections();" <?php
 						echo ($this->row->pages == 'deselect') ? 'checked="checked"' : ''; ?> />
-					
+			</fieldset>	
 				<?php endif; ?>
 				
 			<label id="jform_menuselect-lbl" class="hasTip" for="jform_menuselect"><?php echo JText::_('Menu Selection'); ?>:</label>
@@ -164,7 +167,7 @@ foreach ($this->orders2 as $k=>$items) {
 			echo $pane->startPanel(JText :: _('Module Parameters'), "param-page");
 			$p = $this->params;
 			if ($this->params = $p->render('params')) :
-				echo "<fieldset class=\"panelform\">".$this->params."</fieldset>";
+				echo "<fieldset class=\"panelform-legacy\">".$this->params."</fieldset>";
 			else :
 				echo "<div class=\"noparams-notice\">".JText::_('There are no parameters for this item')."</div>";
 			endif;
@@ -173,7 +176,7 @@ foreach ($this->orders2 as $k=>$items) {
 			if ($p->getNumParams('advanced')) {
 				echo $pane->startPanel(JText :: _('Advanced Parameters'), "advanced-page");
 				if ($this->params = $p->render('params', 'advanced')) :
-					echo "<fieldset class=\"panelform\">".$this->params."</fieldset>";
+					echo "<fieldset class=\"panelform-legacy\">".$this->params."</fieldset>";
 				else :
 					echo "<div class=\"noparams-notice\">".JText::_('There are no advanced parameters for this item')."</div>";
 				endif;
@@ -183,7 +186,7 @@ foreach ($this->orders2 as $k=>$items) {
 			if ($p->getNumParams('legacy')) {
 				echo $pane->startPanel(JText :: _('Legacy Parameters'), "legacy-page");
 				if ($this->params = $p->render('params', 'legacy')) :
-					echo "<fieldset class=\"panelform\">".$this->params."</fieldset>";
+					echo "<fieldset class=\"panelform-legacy\">".$this->params."</fieldset>";
 				else :
 					echo "<div class=\"noparams-notice\">".JText::_('There are no legacy parameters for this item')."</div>";
 				endif;
@@ -194,7 +197,7 @@ foreach ($this->orders2 as $k=>$items) {
 		if ($p->getNumParams('other')) {
 			echo $pane->startPanel(JText :: _('Other Parameters'), "other-page");
 			if ($this->params = $p->render('params', 'other')) :
-				echo "<fieldset class=\"panelform\">".$this->params."</fieldset>";
+				echo "<fieldset class=\"panelform-legacy\">".$this->params."</fieldset>";
 				else :
 				echo "<div class=\"noparams-notice\">".JText::_('There are no other parameters for this item')."</div>";
 				endif;
