@@ -14,14 +14,13 @@
 	</files>
 	<params>
 		<param name="menutype" type="menu" default="" label="Menu Name" description="The name of the menu (default is mainmenu)" />
-		<param name="@spacer" type="spacer" default="" label="" description="" />
+		
 		<param name="startLevel" type="text" default="0" size="5" label="Start Level" description="PARAMSTARTLEVEL" />
 		<param name="endLevel" type="text" default="0" size="5" label="End Level" description="PARAMSTOPLEVEL" />
 		<param name="showAllChildren" type="radio" default="0" label="Always show submenu items" description="PARAMSHOWSUBMENUITEMS">
 			<option value="0">JNo</option>
 			<option value="1">JYes</option>
 		</param>
-		<param name="@spacer" type="spacer" default="" label="" description="" />
 		<param name="window_open" type="text" default="" label="Target Position" description="PARAMTARGETPOSITION" />
 	</params>
 	<params group="advanced">
@@ -29,7 +28,6 @@
 			<option value="1">Use global</option>
 			<option value="0">No caching</option>
 		</param>
-		<param name="@spacer" type="spacer" default="" label="" description="" />
 		<param name="tag_id" type="text" default="" label="Menu Tag ID" description="PARAMMENUTAGID" />
 		<param name="class_sfx" type="text" default="" label="Menu Class Suffix" description="PARAMMENUCLASSSUFFIX" />
 		<param name="moduleclass_sfx" type="text" default="" label="Module Class Suffix" description="PARAMMODULECLASSSUFFIX" />
